--- a/api/products/.htaccess
+++ b/api/products/.htaccess
@@ -9,3 +9,5 @@ RewriteRule ^update/?$ update.php [NC,L]
 RewriteRule ^update/([0-9]+)/?$ update.php?id=$1 [NC,L]
 RewriteRule ^delete/?$ delete.php [NC,L]
 RewriteRule ^delete/([0-9]+)/?$ delete.php?id=$1 [NC,L]
+RewriteRule ^search/?$ search.php [NC,L]
+RewriteRule ^search/([0-9]+)/?$ search.php?id=$1 [NC,L]
